Fix spacing and padding between menu items

--- a/css/module.css
+++ b/css/module.css
@@ -40,7 +40,8 @@
 
 .m-menu-header {
   width: 100%;
-  padding: 5px;
+  padding-bottom: 10px;
+  background: tan;
 }
 
 .m-category-list li {
